--- a/glendening.html
+++ b/glendening.html
@@ -121,10 +121,10 @@
 
       </div> -->
 
-      <div class="cover-img relative-img" style="background-image: url('images/aerial-shot.jpg')"></div>
+      <div class="cover-img relative-img" style="background-image: url('images/prison-glen.png')"></div>
       <div class="centered">
-        <div class="article-title">The Glendening Legacy</span></div><br>
-        <div class="article-desc">Former Maryland Governor Parris Glendening spearheaded the "life means ;ife" policy that would stay in effect decades after leaving office. He now regrets that decision.</div><br>
+        <div class="article-title">The Glendening Effect</span></div><br>
+        <div class="article-desc">Former Gov. Parris Glendening’s &quot;life means life&quot; policy changes criminal sentences for decades — a decision he calls &quot;a mistake.&quot;</div><br>
         <!--<div class="article-author">By CAMILA VELLOSO &nbsp | &nbsp OCTOBER 18, 2019</div>-->
       </div>
 
@@ -144,7 +144,7 @@
 <p class="date">NOVEMBER 4, 2019</p><br><br>
 
 
-<p>In many places “equal justice under law” rings false. Even in Maryland, a traditionally progressive breeding ground for liberal policy, it is far from the truth. The U.S. Supreme Court ruled that juvenile life sentences without the possibility of parole are unconstitutional; that to deny a meaningful chance for release is cruel and unusual punishment. Yet in Maryland, some 300 juveniles remain imprisoned after nearly 25 years passed without a single parole. </p><br><br>
+<p>In many places &quot;equal justice under law&quot; rings false. Even in Maryland, a traditionally progressive breeding ground for liberal policy, it is far from the truth. The U.S. Supreme Court ruled that juvenile life sentences without the possibility of parole are unconstitutional; that to deny a meaningful chance for release is cruel and unusual punishment. Yet in Maryland, some 300 juveniles remain imprisoned after nearly 25 years passed without a single parole. </p><br><br>
 
 <!-- first graphic container-->
 <div class="incarceration-graph"><br>
@@ -158,11 +158,11 @@
   </div><br><br>  <!-- END first graphic container-->
 
 
-<p>Maryland is one of only three states that requires a governor’s signature to grant parole in the case of life sentences. This system functioned until the 1990s, when rising crime rates spurred “tough-on-crime” policies and public demonization of prisoners. Crime and punishment became hot issues in Maryland in 1993. Then “model inmate” Rodney Stokes &mdash; on work release, the last step before parole &mdash; killed his former girlfriend and himself. </p><br><br>
+<p>Maryland is one of only three states that requires a governor’s signature to grant parole in the case of life sentences. This system functioned until the 1990s, when rising crime rates spurred &quot;tough-on- crime&quot; policies and public demonization of prisoners. Crime and punishment became hot issues in Maryland in 1993. Then &quot;model inmate&quot; Rodney Stokes — on work release, the last step before parole -- killed his former girlfriend and himself. </p><br><br>
 
-<p>Anger over the Stokes case and rising crime rates made tougher punishment an issue in the 1994 gubernatorial race.  To address low approval ratings and the crime issue, Democratic Gov. Parris Glendening announced his “life means life” policy and said he would never sign parole for lifers. Maryland governors followed suit until Republican Gov. Larry Hogan paroled three juvenile lifers this year.</p><br><br>
+<p>Anger over the Stokes case and rising crime rates made tougher punishment an issue in the 1994 gubernatorial race.  To address low approval ratings and the crime issue, Democratic Gov. Parris Glendening announced his &quot;life means life&quot; policy and said he would never sign parole for lifers. Maryland governors followed suit until Republican Gov. Larry Hogan paroled three juvenile lifers this year.</p><br><br>
 
-<p>Glendening’s decision delayed the releases of lifers indefinitely, including even those whose papers were already on his desk. “Life means life” is de-facto life without parole for Maryland’s juvenile lifers, who originally were sentenced to life with the opportunity for parole. </p><br><br>
+<p>Glendening’s decision delayed the releases of lifers indefinitely, including even those whose papers were already on his desk. &quot;Life means life&quot; is de-facto life without parole for Maryland’s juvenile lifers, who originally were sentenced to life with the opportunity for parole. </p><br><br>
 
 
 <div class="incarceration-graph"><br>
@@ -177,11 +177,11 @@
 
 <p>The state argues that gubernatorial commutations, executive orders to shorten a sentence, over the years meet the Supreme Court’s standard. But advocates say commutations are more like winning the lottery than earning parole.</p><br><br>
 
-<p>Glendening has since said his “life means life” decision was wrong. He has publically and repeatedly advocated to change it by law, removing the governor from the parole process. </p><br><br>
+<p>Glendening has since said his &quot;life means life&quot; decision was wrong. He has publically and repeatedly advocated to change it by law, removing the governor from the parole process. </p><br><br>
 
-<p>“I made a mistake,” he said in an interview with PBS NewsHour correspondent John Yang. “It was a very bad mistake in the sense that it impacted people, it impacted subsequent administrations, but it was a mistake. And I think it's important to acknowledge.</p><br><br>
+<p>&quot;I made a mistake,&quot; he said in an interview with PBS NewsHour correspondent John Yang. &quot;It was a very bad mistake in the sense that it impacted people, it impacted subsequent administrations, but it was a mistake. And I think it's important to acknowledge.&quot;</p><br><br>
 
-<p>“Of all the powers you want, to be involved in that kind of decision is not one of them,” the former governor said. “The issues are too emotional and too political to put it on the desk of someone who is going to turn around in a few months, a year and run for election. And it almost asks for political decisions on something that should not be political.” </p><br><br>
+<p>&quot;Of all the powers you want, to be involved in that kind of decision is not one of them,&quot; the former governor said. &quot;The issues are too emotional and too political to put it on the desk of someone who is going to turn around in a few months, a year and run for election. And it almost asks for political decisions on something that should not be political.&quot; </p><br><br>
 
 <p>Now, the issue faces more pressure. In 2016 the ACLU sued Hogan for denying juvenile lifers a meaningful opportunity for release. The case remains in court while Maryland’s juvenile lifers wait in prison.</p><br><br>
 
@@ -249,7 +249,7 @@ var chart = c3.generate({
     data: {
         x : 'x',
         columns: [
-            ['x', 'Minorities', 'White','Other race/unknown'],
+            ['x', 'Black', 'White','Other race/unknown'],
             ['Juvenile lifers', 260, 44, 8],
         ],
         type: 'bar'
