--- a/hogan.html
+++ b/hogan.html
@@ -124,7 +124,7 @@
       <div class="cover-img relative-img" style="background-image: url('images/flag1.jpg')"></div>
       <div class="centered">
         <div class="article-title">The Hogan Era</span></div><br>
-        <div class="article-desc">Governor Larry Hogan grants parole for three juvenile lifers - the first parolees in over two decades. </div><br>
+        <div class="article-desc">In a departure from former Gov. Parris Glendening’s &quot;life means life&quot; sentiment, Maryland’s current Gov. Larry Hogan, R, has approved for the release of 36 individuals serving life sentences, including three soon-to-be-released juvenile lifers.</div><br>
         <!--<div class="article-author">By CAMILA VELLOSO &nbsp | &nbsp OCTOBER 18, 2019</div>-->
       </div>
 
