--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <div class="centered">
       <p class="line-1 anim-typewriter">Growing Up Behind Bars</p>
 
-      <div id="test"><hr>The United States is the only country to condemn people to life in prison for crimes committed as minors. In recent years the Supreme Court has ruled this unconstitutional. Yet more than 2000 so-called juvenile lifers remain in prison in what the court says is cruel and unusual punishment.</div>
+      <div id="test"><hr>The United States is the only country to condemn people to life in prison for crimes committed as minors. In recent years the Supreme Court has ruled this unconstitutional. Yet more than 2,000 so-called juvenile lifers remain in prison in what the court says is cruel and unusual punishment.</div>
 
     </div>
 
@@ -140,7 +140,8 @@
 
     <!-- <h1 style="padding-bottom:1em;">"I made a mistake"</h1>-->
     <p class="opening-text">Maryland is one of only three states that gives its governor a say in granting parole. In the 1990s, fear over the rise in violent crime led the governor to declare he would sign no paroles for individuals with life sentences, including those who had committed crimes before turning 18.<br><br>
-      The Supreme Court has ruled that juveniles must be given a chance for release. Yet some 300 such Maryland inmates have gone twenty-three years with no parole. That is now being challenged in court in a suit against Governor Larry Hogan.</p><br>
+
+    The Supreme Court has ruled that juveniles must be given a chance for release. Yet some 300 such Maryland inmates have gone twenty-three years with no parole. That is now being challenged in court in a suit against Governor Larry Hogan.</p><br>
 
     <hr style="width:20%; border:1px solid white;"><br>
 
@@ -189,10 +190,10 @@
     <div class="row">
         <div class="col-md-12">
           <div class="card flex-md-row box-shadow">
-            <img class="card-img-left flex-auto d-none d-md-block" src="images/glendening-thumb.jpg" alt="Card image cap">
+            <img class="card-img-left flex-auto d-none d-md-block" src="images/glen-thumb.jpg" alt="Card image cap">
             <div class="card-body d-flex flex-column">
-              <p class="d-inline-block article-title"><a href="glendening.html" style="color: white !important">The Glendening Legacy</a></p>
-              <p class="card-text article-blurb">One governor changes the rules for nearly twenty-five years.</p>
+              <p class="d-inline-block article-title"><a href="glendening.html" style="color: white !important">The Glendening Effect</a></p>
+              <p class="card-text article-blurb">Former Gov. Parris Glendening’s &quot;life means life&quot; policy changes criminal sentences for decades — a decision he calls &quot;a mistake.&quot;</p>
               <p class="card-text article-author">By Lysney Jeffery</p>
             </div>
 
@@ -203,10 +204,10 @@
       <div class="row">
           <div class="col-md-12">
             <div class="card flex-md-row box-shadow">
-              <img class="card-img-left flex-auto d-none d-md-block" src="images/hogan.jpg" alt="Card image cap">
+              <img class="card-img-left flex-auto d-none d-md-block" src="images/flag-thumb.jpg" alt="Card image cap">
               <div class="card-body d-flex flex-column">
                 <p class="d-inline-block article-title"><a href="hogan.html" style="color: white !important">The Hogan Era</a></p>
-                <p class="card-text article-blurb">The current governor begins to reverse the trend.</p>
+                <p class="card-text article-blurb">Gov. Larry Hogan approaches an era of criminal reform — after two decades with no parole.</p>
                 <p class="card-text article-author">By Hannah Gaskill</p>
               </div>
 
@@ -217,10 +218,10 @@
         <div class="row">
             <div class="col-md-12">
               <div class="card flex-md-row box-shadow">
-                <img class="card-img-left flex-auto d-none d-md-block" src="images/lifers.jpg" alt="Card image cap">
+                <img class="card-img-left flex-auto d-none d-md-block" src="images/lifers-thumb.jpg" alt="Card image cap">
                 <div class="card-body d-flex flex-column">
-                  <p class="d-inline-block article-title"><a href="lifer-profiles.html" style="color: white !important">Meet the characters</a></p>
-                  <p class="card-text article-blurb">Hear Earl Young, Mary Brown-Bey, Calvin McNeill and former Governor Parris Glendening talk about their experiences.</p>
+                  <p class="d-inline-block article-title"><a href="lifer-profiles.html" style="color: white !important">Meet the juvenile lifers</a></p>
+                  <p class="card-text article-blurb">Earl Young, Mary Brown-Bey and Calvin McNeill went to prison determined to win parole. They have spent a combined 100 years behind bars.</p>
                   <p class="card-text article-author">By CNS Staff</p>
                 </div>
 
@@ -334,11 +335,12 @@
 
   <div id="nation-container"><br>
 
-    <p class="opening-text">Three Supreme Court decisions have changed the landscape of juvenile justice policy since the “tough on crime” era of the 1990s. Together, they ruled unconstitutional both the death penalty and life without parole for juvenile offenders.<br><br>
+    <p class="opening-text">Three Supreme Court decisions have changed the landscape of juvenile justice policy since the &quot;tough on crime&quot; era of the 1990s. Together, they ruled unconstitutional both the death penalty and life without parole for juvenile offenders.  <br><br>
 
       The response to those rulings has been strikingly varied from state to state. Three states had large numbers of juveniles sentenced to life without parole, sentenced to die in prison: Pennsylvania, Michigan and Florida. Pennsylvania stands out for its efforts to resentence and release juveniles.<br><br>
 
-      Three states, Maryland, California and Oklahoma, require a governor’s signature to grant parole rather than the approval of an appointed parole board. Again, those states have responded unevenly. Twenty-three states and the District of Columbia have banned life without parole sentences for juveniles. Marsha Levick, the Chief Legal Officer of the Philadelphia-based Juvenile Law Center, captured the essence of the situation when she said, “In America, it’s either justice by geography, justice by race, or justice by wealth.” </p><br>
+      Three states, Maryland, California and Oklahoma, require a governor’s signature to grant parole rather than the approval of an appointed parole board. Again, those states have responded unevenly. Twenty-three states and the District of Columbia have banned life without parole sentences for juveniles. Marsha Levick, the Chief Legal Officer of the Philadelphia-based Juvenile Law Center, captured the essence of the situation when she said, &quot;In America, it’s either justice by geography, justice by race, or justice by wealth.&quot;</p><br>
+
     <hr style="width:20%; border:1px solid white;"><br><br>
 
 
@@ -347,10 +349,10 @@
         <div class="row">
             <div class="col-md-12">
               <div class="card flex-md-row box-shadow">
-                <img class="card-img-left flex-auto d-none d-md-block" src="images/pen-thumb.jpg" alt="Card image cap">
+                <img class="card-img-left flex-auto d-none d-md-block" src="images/pa-thumb.jpg" alt="Card image cap">
                 <div class="card-body d-flex flex-column">
-                  <p class="d-inline-block article-title"><a href="pennsylvania.html" style="color: white !important">Pennsylvania redresses juvenile lifer cases</a></p>
-                  <p class="card-text article-blurb">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                  <p class="d-inline-block article-title"><a href="pennsylvania.html" style="color: white !important">Pennsylvania’s about-face</a></p>
+                  <p class="card-text article-blurb">In the Keystone State more than 500 juveniles served sentences of life without parole. Today many of them have been re-sentenced, many to time served.</p>
                   <p class="card-text article-author">By Camila Velloso</p>
                 </div>
 
@@ -361,10 +363,10 @@
           <div class="row">
               <div class="col-md-12">
                 <div class="card flex-md-row box-shadow">
-                  <img class="card-img-left flex-auto d-none d-md-block" src="images/fence-thumb.jpg" alt="Card image cap">
+                  <img class="card-img-left flex-auto d-none d-md-block" src="images/wire-thumb.png" alt="Card image cap">
                   <div class="card-body d-flex flex-column">
-                    <p class="d-inline-block article-title"><a href="other-states.html" style="color: white !important">States with worst records of juvenile lifer incarceration</a></p>
-                    <p class="card-text article-blurb">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <p class="d-inline-block article-title"><a href="other-states.html" style="color: white !important">Michigan and Florida go different routes</a></p>
+                    <p class="card-text article-blurb">Both states had large numbers of juveniles sentenced to life without parole. Both have hit speed bumps as they try to respond to the Supreme Court.</p>
                     <p class="card-text article-author">By Athiyah Azeem, Dominique Janifer and Lauren Perry</p>
                   </div>
 
@@ -375,10 +377,10 @@
             <div class="row">
                 <div class="col-md-12">
                   <div class="card flex-md-row box-shadow">
-                    <img class="card-img-left flex-auto d-none d-md-block" src="images/statehouse-thumb.jpg" alt="Card image cap">
+                    <img class="card-img-left flex-auto d-none d-md-block" src="images/annapolis-thumb.jpg" alt="Card image cap">
                     <div class="card-body d-flex flex-column">
                       <p class="d-inline-block article-title"><a href="three-states.html" style="color: white !important">Parole in the hands of governors</a></p>
-                      <p class="card-text article-blurb">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                      <p class="card-text article-blurb">In most states parole commissions decide who should be released. Only three require the governor to sign paroles. Each state has handled the court’s rulings differently.</p>
                       <p class="card-text article-author">By Jaime Kerner and Sara Salimi</p>
                     </div>
 
