--- a/lifer-profiles.html
+++ b/lifer-profiles.html
@@ -135,7 +135,7 @@
         <div class="cover-img relative-img" style="background-image: url('images/glendening-legacy.jpg')"></div>
         <div class="centered">
           <div class="article-title">Meet The Juvenile Lifers</span></div><br>
-          <div class="article-desc">Earl Young, Mary Brown-Bey and Calvin McNeill spent nearly 100 years incarcerated collectively. Here are their stories.</div><br>
+          <div class="article-desc">Earl Young, Mary Brown-Bey and Calvin McNeill went to prison determined to win parole. They have spent a combined 100 years behind bars.</div><br>
           <!--<div class="article-author">By CAMILA VELLOSO &nbsp | &nbsp OCTOBER 18, 2019</div>-->
         </div>
 
@@ -169,10 +169,11 @@
 
 <p>Mary Brown-Bey had served 20 years for 1st degree murder. convicted at the age of 15. Once Glendening stopped signing paroles, Brown-Bay would remain in prison another 11 years.</p><br><br>
 
-  <div class="pbs-video">
+<div class="video-content">
   <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/M2GgIXkvFeE"></iframe>
   </div>
+
 </div><br><br>
 
 <div class="border"></div><br>
