--- a/pennsylvania.html
+++ b/pennsylvania.html
@@ -123,8 +123,8 @@
 
       <div class="cover-img relative-img" style="background-image: url('images/main-img.jpg')"></div>
       <div class="centered">
-        <div class="article-title">Fixing The System</span></div><br>
-        <div class="article-desc">Pennsylvania once had the largest population of juvenile lifers in the country. Now, it serves as a model of successful resentencing and release of those inmates. </div><br>
+        <div class="article-title">Pennsylvania’s About-Face</span></div><br>
+        <div class="article-desc">In the Keystone State more than 500 juveniles served sentences of life without parole. Today many of them have been re-sentenced, many to time served.</div><br>
         <!--<div class="article-author">By CAMILA VELLOSO &nbsp | &nbsp OCTOBER 18, 2019</div>-->
       </div>
 
