--- a/other-states.html
+++ b/other-states.html
@@ -124,8 +124,8 @@
 
       <div class="cover-img relative-img" style="background-image: url('images/wire.png')"></div>
       <div class="centered">
-        <div class="article-title">Incarcerated For Life</span></div><br>
-        <div class="article-desc">The United States is the only country in the world that condems juveniles to spend their entire lives in prison. Along with Maryland and Pennsylvania, Louisiana, Michigan and Florida harbor the largest juvenile lifer populations in the nation.</div><br>
+        <div class="article-title">Michigan and Florida Go Different Routes</span></div><br>
+        <div class="article-desc">Both states had large numbers of juveniles sentenced to life without parole. Both have hit speed bumps as they try to respond to the Supreme Court.</div><br>
         <!--<div class="article-author">By CAMILA VELLOSO &nbsp | &nbsp OCTOBER 18, 2019</div>-->
       </div>
 
@@ -144,20 +144,17 @@
 <p class="date">NOVEMBER 4, 2019</p><br><br>
 
 
-<p>In the 1990s, politicians tried to outdo one another on who was tougher on crime. George H. W. Bush successfully labeled his presidential opponent, Michael Dukakis, as being someone who coddled criminals. In that climate, the United States became the only country that condemns people to spend their lives behind bars for crimes they committed before they turned 18.
-</p><br><br>
+<p>In the 1990s, politicians tried to outdo one another in being tougher on crime. In 1988, George H. W. Bush had successfully labeled his presidential opponent, Michael Dukakis, as someone who coddled criminals.</p><br><br>
 
-<p>Beyond Pennsylvania, three other states had large numbers of juvenile lifers without parole: Michigan, Florida, and Louisiana. None has come close to Pennsylvania’s response to the Supreme Court’s mandate.</p><br><br>
+<p>In that climate, the United States became the only country to condemn people to spend their lives behind bars for crimes they committed before they turned 18.</p><br><br>
+
+<p>Beyond Pennsylvania, two other states stood out for large numbers of juvenile lifers without parole: Michigan and Florida. Neither has come close to Pennsylvania’s response to the Supreme Court mandate that such sentences are almost always unconstitutionally cruel and unusual.</p><br><br>
 
 <div class="border"></div><br>
 
 <p class="state"><img src="images/michigan1.png" alt="Smiley face" width="150" height="137" align="middle">&nbsp MICHIGAN</p><br><br>
 
-<p>Prosecutors and victims’ families in Michigan pressed to keep life-without-parole sentences in place. They pointed to the exception granted by the U.S. Supreme Court in2016, “for the rarest of juvenile
-offenders, those whose crimes reflect permanent incorrigibility.” </p><br><br>
-
-<p>They appealed to the Michigan Supreme Court seeking a path for preserving life without parole. That case delayed action on many of the
-cases. It wasn’t until June, 2018 that Chief Justice Stephen Markman, writing for the majority said that a trial judge doesn’t need to find any particular fact before sentencing with life without parole. He wrote: “If the trial court simply finds that there are no mitigating circumstances, it can sentence a juvenile to life without parole.”</p><br><br>
+<p>In Michigan, prosecutors and victims’ families pressed to keep life-without-parole sentences in place. They pointed to the U.S. Supreme Court’s ruling in 2016 granting an exception &quot;for the rarest of juvenile offenders, those whose crimes reflect permanent incorrigibility.&quot;</p><br><br>
 
 
 <!-- first graphic container-->
@@ -171,10 +168,11 @@ cases. It wasn’t until June, 2018 that Chief Justice Stephen Markman, writing 
     <div class="chart-source">Source: Pennsylvania Department of Corrections</div><br>
   </div><br><br>  <!-- END first graphic container-->
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br><br>
+
+<p>They appealed to the Michigan Supreme Court seeking to preserve life without parole. That case delayed action on reviews of other sentences. On June 21, 2018, Chief Justice Stephen Markman, writing for the majority, said that a trial judge doesn’t need to find any particular fact to keep juveniles behind bars for life. He wrote: &quot;If the trial court simply finds that there are no mitigating circumstances, it can sentence a juvenile to life without parole.&quot; </p><br><br>
 
 
-  <!-- first graphic container-->
+  <!-- second graphic container-->
   <div class="incarceration-graph"><br>
       <div class="graphic-container">
         <div class="chart-title"><b>Resentencing rates for juvenile lifers in Michigan</b></div>
@@ -185,37 +183,26 @@ cases. It wasn’t until June, 2018 that Chief Justice Stephen Markman, writing 
       <div class="chart-source">Source: Pennsylvania Department of Corrections</div><br>
     </div><br><br>  <!-- END first graphic container-->
 
-<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p><br><br>
-
-<!-- third graphic container-->
-<div class="incarceration-graph"><br>
-    <div class="graphic-container">
-      <div class="chart-title"><b>Length of new prison terms</b></div>
-      <div class="chart-description">In Michigan, 181 juvenile lifers received resentences with new minimum and maximum prison terms. </div><br>
-      <div class="chart-author">By CAMILA VELLOSO</div><br>
-    </div>
-    <div id="age-released"></div><br>
-    <div class="chart-source">Source: Pennsylvania Department of Corrections</div><br>
-  </div><br><br>  <!-- END third graphic container-->
-
-  <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p><br><br>
 
 <div class="border"></div><br>
 
 <p class="state"><img src="images/florida1.png" alt="Smiley face" width="150" height="137" align="middle">&nbsp FLORIDA</p><br><br>
 
-<p>For juvenile lifers in Florida, resentencing is likely only after a long imprisonment. State law and Florida Supreme Court decisions have followed the state’s “tough on crime” pattern.</p><br><br>
+<p>For Florida’s juvenile lifers, resentencing is likely only after a long imprisonment. State law and Florida Supreme Court decisions have followed the state’s &quot;tough on crime&quot; pattern.</p><br><br>
 
-<p>Faced with a high violent crime rate, in 1995 Florida passed legislation that any lifer incarcerated after that date would have mandatory life without parole.</p><br><br>
+<p>Faced with a high violent crime rate, in 1995 Florida passed legislation mandating life without parole for any lifer incarcerated after that date.</p><br><br>
 
-<p>After the United States Supreme Court ruling on juveniles in 2012, legislators amended the law in 2014. Juveniles who committed murder would be eligible for review by a judge after 25 years.</p><br><br>
+<p>In 2014, after the U.S. Supreme Court ruling on juveniles, legislators amended the law.  Juveniles who committed murder would be eligible for review by a judge after 25 years.</p><br><br>
 
-<p>After challenges seeking individual resentencing reviews, 2018 the Florida Supreme Court put the matter to rest. It ruled that juveniles sentenced to life with the possibility of parole after 25 years indeed had meaningful opportunity for release, and thus are not entitled to further resentencing review. </p><br><br>
+<p>After challenges seeking individual resentencing reviews, in 2018 the Florida Supreme Court put the matter to rest. It ruled that juveniles sentenced to life with the possibility of parole after 25 years indeed had meaningful opportunity for release, and thus are not entitled to further resentencing review. </p><br><br>
 
-<p>In June of 2019 Governor Ron Desantis signed a criminal justice reform package that many criticize as being watered down. Still it represents change, if only in at attempt to reduce the state’s massive prison population.</p><br><br>
+<p>Steve Harper of the Florida Review and Resentencing Project said it may still litigate the Florida Supreme Court decision. As he put it, &quot;The Florida parole system is a joke.&quot;</p><br><br>
 
-<p>The bill also creates a task force to reevaluate Florida’s entire criminal punishment code, examining whether the set punishments fit the crime.</p><br><br>
+<p>In June 2019, Gov. Ron DeSantis signed a criminal justice reform package often criticized as lax. It represents an attempt to reduce the state’s massive prison population.</p><br><br>
 
+<p>The bill also creates a task force to reevaluate Florida’s entire criminal punishment code, including whether the existing punishments fit the crimes.</p><br><br>
+
+<!--
 <div class="border"></div><br>
 
 <p class="state"><img src="images/louisiana1.png" alt="Smiley face" width="150" height="137" align="middle">&nbsp LOUISIANA</p><br><br>
@@ -227,8 +214,8 @@ without parole in the case of first-degree murder.</p><br><br>
 
 
 
-<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p><br><br><br>
-
+<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p><br><br><br> -->
+<br>
 <a href="pennsylvania.html"><p class="more">READ MORE: Pennsylvania leads the nation in resentencing juvenile lifers cases</p></a><br>
 
 <a href="three-states.html"><p class="more">READ MORE: California, Maryland and Oklahoma only states where the governor has power to parole juvenile lifers</p></a><br>
