--- a/three-states.html
+++ b/three-states.html
@@ -124,8 +124,8 @@
 
       <div class="cover-img relative-img" style="background-image: url('images/annapolis-state-house copy.jpg')"></div>
       <div class="centered">
-        <div class="article-title">In The Governor's Hands</span></div><br>
-        <div class="article-desc">The United States is the only country in the world that condems juveniles to spend their entire lives in prison. In Maryland, California and Oklahoma, the power to release those individuals rests with the governor.</div><br>
+        <div class="article-title">Parole In The Hands Of Governors</span></div><br>
+        <div class="article-desc">In most states parole commissions decide who should be released. Only three require the governor to sign paroles. Each state has handled the court’s rulings differently.</div><br>
         <!--<div class="article-author">By CAMILA VELLOSO &nbsp | &nbsp OCTOBER 18, 2019</div>-->
       </div>
 
@@ -144,23 +144,27 @@
 <p class="date">NOVEMBER 4, 2019</p><br><br>
 
 
-<p>Maryland is one of only three states in which the governor makes the final decision on parole. The other two are Oklahoma and California. No two states could be responding more differently.
-</p><br><br>
+<p>Maryland is one of only three states whose governors make the final decision on parole for people sentenced to life. The other two, Oklahoma and California, take very different paths.</p><br><br>
 
 <div class="border"></div><br>
 
 <p class="state"><img src="images/california.png" alt="Smiley face" width="150" height="137" align="middle"> CALIFORNIA</p><br><br>
 
-<p>While Maryland and Oklahoma have been slow to change their juvenile parole procedures, California governors vowed to change theirs—and largely have.
-Gov. Jerry Brown took action within months of the U.S. Supreme Court’s 2012 ban on mandatory life sentences without parole for juvenile offenders. He signed Senate Bill 9 in January 2013. That allowed those given life without parole as juveniles to request a new sentencing hearing.</p><br><br>
+<p>While Maryland and Oklahoma have been slow to change juvenile parole procedures, California governors vowed to change theirs &mdash; and largely have. Gov. Jerry Brown acted within months of the U.S. Supreme Court’s 2012 ban on mandatory life sentences without parole for juvenile offenders. He signed Senate Bill 9 in January 2013. Those sentenced to life without parole as juveniles could request new sentencing hearings.</p><br><br>
 
-<p>In 2016 the U.S. Supreme Court mad it clear that its 2012 decision applied retroactively. In 2017 Gov. Brown signed Senate Bill 394 which outlawed life without parole sentences. It required that juveniles serving life sentences be given a parole hearing 25 years after being convicted.</p><br><br>
+<p>The 2016 U.S. Supreme Court decision made its 2012 action retroactive. In 2017 Gov. Brown signed Senate Bill 394, outlawing life-without-parole sentences and granting juvenile lifers the right to parole hearings 25 years after conviction. </p><br><br>
 
-<p>Brown’s successor, Gov. Gavin Newsom, went further, vowing in January 2019 to “end the juvenile justice system as we know it.” He proposes moving the Division of Juvenile Justice from the California Dept. of Corrections and Rehabilitation and placing it under the supervision of the Health and Human Services Agency. “Juvenile justice should be about helping kids imagine and pursue new lives — not jumpstarting the revolving door of the criminal justice system,” Newsom said. “The system should be helping these kids unpack trauma and adverse experiences many have suffered.“</p><br><br>
+<p>Brown’s successor, Gov. Gavin Newsom, went further, vowing in January 2019 to &quot;end the juvenile justice system as we know it.&quot; He proposes moving the Division of Juvenile Justice from the California Department of Corrections and Rehabilitation and placing it under the Health and Human Services Agency. </p><br><br>
 
-<p>In March Newsom suspended executions for as long as he is in office.  In September he granted clemency to 21 violent offenders in California. Seven of those had been sentenced to life without parole. Clemency does not free them but allows these individuals to have their cases considered by a parole board. Republicans criticized Newsom saying, “Where is the compassion for the crime victims and their families?”</p><br><br>
+<p>&quot;Juvenile justice should be about helping kids imagine and pursue new lives &mdash; not jumpstarting the revolving door of the criminal justice system,&quot; Newsom said. &quot;The system should be helping these kids unpack trauma and adverse experiences many have suffered.&quot;</p><br><br>
 
-<p>Newsom’s office stated that the governor considered several factors, including “the circumstances of the crime and the sentence imposed, the applicant’s conduct while in prison and the applicant’s self-development efforts since the offense, including whether they have made use of available rehabilitative programs and addressed treatment needs.”</p><br><br>
+<p>In March Newsom suspended executions for the duration of his tenure.</p><br><br>
+
+<p>In September he granted clemency to 21 violent offenders in California. Seven had been sentenced to life without parole. Clemency does not free them, but their cases can be brought before the parole board.</p><br><br>
+
+<p>Republicans criticized Newsom saying, &quot;Where is the compassion for the crime victims and their families?&quot;</p><br><br>
+
+<p>Newsom’s office stated that the governor considered several factors, including &quot;the circumstances of the crime and the sentence imposed, the applicant’s conduct while in prison and the applicant’s self-development efforts since the offense, including whether they have made use of available rehabilitative programs and addressed treatment needs.&quot;</p><br><br><br>
 
 
 <div class="border"></div><br>
@@ -168,17 +172,20 @@ Gov. Jerry Brown took action within months of the U.S. Supreme Court’s 2012 ba
 <p class="state"><img src="images/oklahoma.png" alt="Smiley face" width="150" height="137" align="middle">&nbsp OKLAHOMA</p><br><br>
 
 
-<p>The 2016 Supreme Court ruling has had minimal impact on juvenile lifers in Oklahoma, where politicians have a history of being tough on violent crime.  At the time of the decision 43 prisoners in Oklahoma serving life-without-parole sentences for crimes they committed while juveniles, according to Tim Laughlin, of the state’s Oklahoma Indigent Defense System.</p><br><br>
+<p>The 2016 Supreme Court ruling has only minimally affected juvenile lifers in Oklahoma, where politicians have historically taken a tough stance on violent crime. In 2016, according to Tim Laughlin, of the Oklahoma Indigent Defense System, 43 Oklahomans were serving life-without-parole sentences for juvenile crimes.</p><br><br>
 
-<p>“It’s not all inclusive, but the ones we identified, at least initially, to the best of our abilities were about 43,” Laughlin said. In 2016 the Oklahoma Court of Criminal Appeals spelled out new sentencing guidelines saying that juries could not impose life-without-parole unless “you find beyond a reasonable doubt that the defendant is irreparably corrupt and permanently incorrigible.”</p><br><br>
+<p>&quot;It’s not all inclusive, but the ones we identified, at least initially, to the best of our abilities were about 43,&quot; Laughlin said. </p><br><br>
 
-<p>The legislature attempted to reverse that, passing a bill granting judges the right to give juveniles life with no parole. Gov. Mary Fallin vetoed it.</p><br><br>
+<p>In 2016 the Oklahoma Court of Criminal Appeals issued new sentencing guidelines. Going forward, juries could not impose life-without-parole without finding &quot;that the defendant is irreparably corrupt and permanently incorrigible.&quot; The Legislature attempted a reversal, passing a bill allowing judges to give juveniles life with no parole. Gov. Mary Fallin vetoed it.</p><br><br>
 
-<p>Oklahoma state law states that a defendant must file proper paperwork to request a lawyer, and public defenders are unable to enter a criminal case and represent a defendant unless a judge appoints them to do so. </p><br><br>
+<p>Oklahoma requires defendants to file proper paperwork to request a lawyer. Only with judicial appointment can public defenders represent defendants in criminal cases.</p><br><br>
 
-<p>“Our statute doesn’t allow us to initiate post conviction applications in non- death penalty cases,” Laughlin said. “At this point, it’s incumbent on the individual to file a post conviction application.”</p><br><br>
+<p>&quot;Our statute doesn’t allow us to initiate post-conviction applications in non- death penalty cases,&quot; Laughlin said. &quot;At this point, it’s incumbent on the individual to file a post-conviction application.&quot;</p><br><br>
 
-<p>That has severely limited the initial number of prisoners being resentenced. Only seven out of the eligible juvenile life-without-parole prisoners have been re-sentenced, according to The Frontier. (Links to an external site.) Most still have life-without-parole sentences. Since 2016 no juvenile lifter has been paroled by either of two governors.</p><br><br><br>
+<p>The requirements have severely limited the initial number of resentencing cases. Only seven of the juvenile life-without-parole prisoners have been re-sentenced, according to <a href="https://www.enidnews.com/oklahoma/oklahoma-s-juvenile-life-without-parole-prisoners-struggle-to-get/article_38393fc2-6122-11e9-b4ba-13e9ae3620a7.html">Brianna Bailey of the Frontier</a>. Most sentenced as juveniles still have life-without-parole sentences. Since 2016, neither of the two governors has paroled a juvenile lifer.</p><br><br>
+
+<p>On Nov. 4, Oklahoma took one step toward prison reform. Faced with mounting costs and overcrowding, Gov. Kevin Stitt released 462 inmates incarcerated for drug possession and other nonviolent crimes. This did not affect juvenile lifers, but it was an important move for a &quot;lock-‘em-up state.&quot;</p><br><br><br>
+
 
 <a href="pennsylvania.html"><p class="more">READ MORE: Pennsylvania leads the nation in resentencing juvenile lifers cases</p></a><br>
 
