--- a/glendening-effect.html
+++ b/glendening-effect.html
@@ -54,7 +54,7 @@
 
 
     <!-- our CSS  -->
-    <link rel="stylesheet" href="css/lifer-profiles.css">
+    <link rel="stylesheet" href="css/glendening-effect.css">
 
     <!-- Required for sidescroll -->
     <link rel="stylesheet" href="css/scroll-style.css">
@@ -105,66 +105,92 @@
           <div class="col-xs-2 pull-left" id="social-icons"><i class="fa">&#xf099;</i> &nbsp <i class="fa">&#xf09a;</i></div>
       </div>
 
-      <!-- Title -->
-        <div class="cover-img relative-img" style="background-image: url('images/glendening-legacy.jpg')"></div>
-        <div class="centered">
-          <div class="article-title">Meet The Juvenile Lifers</span></div><br>
-          <div class="article-desc">Earl Young and Calvin McNeill went to prison determined to win parole. They have spent a combined 72 years behind bars.</div><br>
-          <!--<div class="article-author">By CAMILA VELLOSO &nbsp | &nbsp OCTOBER 18, 2019</div>-->
-        </div>
 
-    </div><!-- END Hero Container -->
+    <!-- Title -->
+      <div class="cover-img relative-img" style="background-image: url('images/flag1.jpg')"></div>
+      <div class="centered">
+        <div class="article-title">The Glendening Effect</div>
+        <div class="article-desc">Former Gov. Parris Glendening’s &quot;life means life&quot; policy changes criminal sentences for hundreds of prisoners. It is a decision he calls &quot;a mistake,&quot; but it’s impact continues to this day.</div><br>
+      </div>
+
+  </div><!-- END Hero Container -->
 
 
 <!-- START Main Story Container -->
+
 <div class="story-container">
   <a name="story"><div class="container"></a><br><br>
 
-    <!-- Earl Young video -->
-    <div class="border"></div><br>
-    <p class="state">EARL YOUNG</p>
-    <p class="author">By <span>DELON THORNTON</span></p><br>
+  <!-- Author and date -->
+    <p class="author">By <span>HANNAH GASKILL</span></p>
+    <p class="date">NOVEMBER 4, 2019</p><br><br>
 
-    <p>Earl Young was released in July. Producer DeLon Thornton arranged for Young to tell his story to “PBS NewsHour” correspondent John Yang. Thornton shares more of Young’s story.</p><br><br>
+  <!-- Article Body -->
+    <p>In many places &quot;equal justice under law&quot; rings false. Even in Maryland, a traditionally progressive breeding ground for liberal policy, it is far from the truth. The U.S. Supreme Court ruled that juvenile life sentences without the possibility of parole are unconstitutional; that to deny a meaningful chance for release is cruel and unusual punishment. Yet in Maryland, some 300 juveniles remain imprisoned after nearly 25 years passed without a single parole. </p><br><br>
 
-    <div class="video-content">
-      <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/M2GgIXkvFeE"></iframe>
-      </div>
+    <!-- first graphic container-->
+    <div class="incarceration-graph"><br>
+        <div class="graphic-container">
+          <div class="chart-title"><b>Racial makeup of juvenile lifers in Maryland</b></div>
+          <div class="chart-description">76.6% of incarcerated juvenile lifers in Maryland are black and 14.1% are white. </div><br>
+          <div class="chart-author">By CAMILA VELLOSO</div><br>
+        </div>
+        <div id="race"></div><br>
+        <div class="chart-source">Source: Maryland Department of Public Safety and Correctional Services Recruitment</div><br>
+      </div><br><br>  <!-- END first graphic container-->
+
+
+    <p>Maryland is one of only three states that requires a governor’s signature to grant parole in the case of life sentences. This system functioned until the 1990s, when rising crime rates spurred &quot;tough-on- crime&quot; policies and public demonization of prisoners. Crime and punishment became hot issues in Maryland in 1993. Then &quot;model inmate&quot; Rodney Stokes — on work release, the last step before parole -- killed his former girlfriend and himself. </p><br><br>
+
+    <p>Anger over the Stokes case and rising crime rates made tougher punishment an issue in the 1994 gubernatorial race.  To address low approval ratings and the crime issue, Democratic Gov. Parris Glendening announced his &quot;life means life&quot; policy and said he would never sign parole for lifers. Maryland governors followed suit until Republican Gov. Larry Hogan paroled three juvenile lifers this year.</p><br><br>
+
+    <p>Glendening’s decision delayed the releases of lifers indefinitely, including even those whose papers were already on his desk. &quot;Life means life&quot; is de-facto life without parole for Maryland’s juvenile lifers, who originally were sentenced to life with the opportunity for parole. </p><br><br>
+
+<!-- Second graphic container-->
+    <div class="incarceration-graph"><br>
+      <div class="graphic-container">
+        <div class="chart-title"><b>Juvenile lifer incarceration by Maryland counties</b></div>
+        <div class="chart-description">Baltimore City, followed by Prince George’s County and Baltimore County, has the most incarcerated juvenile lifers at 115.</div><br>
+        <div class="chart-author">By CAMILA VELLOSO</div><br>
+        <img src="images/md-counties-map-2.png" alt="Map of juvenile lifers by Maryland counties" width="100%"><br><br>
+        <div class="chart-source">Source: Maryland Department of Public Safety and Correctional Services Recruitment</div><br>
+    </div>
     </div><br><br>
 
-    <!-- Calvin McNeill video -->
-    <div class="border"></div><br>
+    <p>The state argues that gubernatorial commutations, executive orders to shorten a sentence, over the years meet the Supreme Court’s standard. But advocates say commutations are more like winning the lottery than earning parole.</p><br><br>
 
-    <p class="state">CALVIN MCNEILL</p>
-    <p class="author">By <span>JAIME KERNER</span></p><br>
+    <p>Glendening has since said his &quot;life means life&quot; decision was wrong. He has publically and repeatedly advocated to change it by law, removing the governor from the parole process. </p><br><br>
 
-    <p>Calvin McNeill was 17 when was convicted of first-degree murder in 1981. His sentence was life with the possibility of parole. But when a supposedly “model prisoner” on work release murdered his former girl friend and committed suicide, Maryland withdrew consideration of parole. No juveniles sentenced with life would be paroled for nearly twenty-five years. 
-
-    <br><br>McNeill has not had a single infraction in more than a quarter of a century and has earned numerous commendations from prison staff. Maryland authorities would not allow a taped interview in the prison. He spoke with “PBS NewsHour” correspondent John Yang by phone.</p><br><br>
+    <p>&quot;I made a mistake,&quot; he said in an interview with PBS NewsHour correspondent John Yang. &quot;It was a very bad mistake in the sense that it impacted people, it impacted subsequent administrations, but it was a mistake. And I think it's important to acknowledge.&quot;</p><br><br>
 
     <div class="video-content">
       <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/375294660"></iframe>
+        <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/375295419"></iframe>
       </div>
 
-    </div><br><br><br>
+    </div><br><br>
 
-    <!-- Read more article links -->
-    <a href="glendening-effect.html"><p class="more">READ MORE: Former Maryland Governor Parris Glendening regrets his "life means life" policy, which condemned hundreds of juvenile lifers</p></a><br>
+    <p>&quot;Of all the powers you want, to be involved in that kind of decision is not one of them,&quot; the former governor said. &quot;The issues are too emotional and too political to put it on the desk of someone who is going to turn around in a few months, a year and run for election. And it almost asks for political decisions on something that should not be political.&quot; </p><br><br>
 
-    <a href="lomax.html"><p class="more">READ MORE: Current Maryland Governor Larry Hogan diverts from decades old "life means life policy"</p></a><br><br>
+    <p>Now, the issue faces more pressure. In 2016 the ACLU sued Hogan for denying juvenile lifers a meaningful opportunity for release. The case remains in court while Maryland’s juvenile lifers wait in prison.</p><br><br>
 
-    <!-- About and credits -->
+    <p style="font-style: italic;">*Story originally <a href="#">published</a> by Capital News Service on December 2, 2019. Additional reporting by Lynsey Jeffery.</p><br><br><br>
+
+    <!-- Read more article links-->
+    <a href="lomax.html"><p class="more">READ MORE: Current Maryland Governor Larry Hogan diverts from decades old "life means life policy"</p></a><br>
+
+    <a href="lifer-profiles.html"><p class="more">READ MORE: Earl Young and Calvin McNeill went to prison determined to win parole. They have spent a combined 72 years behind bars.</p></a><br><br>
+
+    <!-- About the project and credits -->
     <hr style="border: 1px solid white; width:50%;"><br>
 
     <p class="end-gold" style="color: #D9B269; font-size: 1.5em;">About the project</p><br>
 
     <p class="about">Sed ullamcorper morbi tincidunt ornare massa eget. Dignissim diam quis enim lobortis scelerisque. Morbi blandit cursus risus at.
-      <br><br> Mus mauris vitae ultricies leo integer malesuada. Eget nunc lobortis mattis aliquam faucibus purus. Mattis pellentesque id nibh tortor id aliquet lectus.
-      <br><br> Justo eget magna fermentum iaculis eu non diam. Magna fringilla urna porttitor rhoncus dolor purus non. Id neque aliquam vestibulum morbi blandit cursus.
-      <br><br>Nunc sed id semper risus in. Vitae congue eu consequat ac felis donec et odio. Ullamcorper velit sed ullamcorper morbi tincidunt ornare. Pretium quam vulputate dignissim suspendisse in.
-      <br><br>Et tortor consequat id porta nibh venenatis cras sed. Nibh mauris cursus mattis molestie a. Imperdiet dui accumsan sit amet. Arcu risus quis varius quam quisque id. Vel fringilla est ullamcorper eget.
+    <br><br> Mus mauris vitae ultricies leo integer malesuada. Eget nunc lobortis mattis aliquam faucibus purus. Mattis pellentesque id nibh tortor id aliquet lectus.
+    <br><br> Justo eget magna fermentum iaculis eu non diam. Magna fringilla urna porttitor rhoncus dolor purus non. Id neque aliquam vestibulum morbi blandit cursus.
+    <br><br>Nunc sed id semper risus in. Vitae congue eu consequat ac felis donec et odio. Ullamcorper velit sed ullamcorper morbi tincidunt ornare. Pretium quam vulputate dignissim suspendisse in.
+    <br><br>Et tortor consequat id porta nibh venenatis cras sed. Nibh mauris cursus mattis molestie a. Imperdiet dui accumsan sit amet. Arcu risus quis varius quam quisque id. Vel fringilla est ullamcorper eget.
     </p><br><br>
 
     <p class="end-gold" style="color: #D9B269; font-size: 1.5em;">Credits</p><br>
@@ -176,11 +202,8 @@
       <b>Video:</b> Athiyah Azeem, Hannah Gaskill Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi DeLon Thornton, Emily Top and Camila Velloso</b> <br><br>
       <b>Project editors:</b> Kathy Best, Tom Bettag, Karen Denny, Marty Kaiser, Adam Marton and Sean Mussenden<br><br>
       <b>Audience engagement:</b> Alex Pyles<br><br>
-      <b>Top photo:</b> Courtesy of Maryland Department of Public Safety and Correctional Services Recruitment<br><br>
+      <b>Top photo:</b> Mid-Atlantic Aerial, LLC<br><br>
     </p><br><br>
-
-
-
 
 </div>
 </div>
@@ -196,6 +219,8 @@
     });
 </script>
 
+
+
 <!-- c3 script-->
    <script type="text/javascript">
    //CHART 1
@@ -205,54 +230,58 @@
              data: {
                x: 'x',
                columns: [
-                 ['x', 1960, 1970, 1980, 1990, 2000,2010],
-                ['Black juveniles', 3, 17, 67, 107, 50, 14],
-                ['White juveniles', 2, 7, 29, 28, 18, 2]
+                 ['x', 1950, 1960, 1970, 1980, 1990, 2000,2010],
+                ['Juvenile lifers', 1, 1, 83, 109, 194, 106, 27],
                ]
              },
              color: {
-               pattern: ['#D9B269', '#78A6DD', '#ee6a4b', '#60c4b2', '#973895']
+               pattern: ['#78A6DD', '#ff00ff', '#ee6a4b', '#60c4b2', '#973895']
              }
            });
 
-           var chart2 = c3.generate({
-              bindto: '#age-released',
-               data: {
-                 columns: [
-                  ['# of juvenile lifers', 1, 65, 70, 29, 1, 15]
-                 ],
-                   type: 'bar'
-               },
 
-               axis: {
-                  x: {
-                    type: 'category',
-                    categories: ['25yrs-40yrs', '25-29yrs-60yrs', '30-39yrs-60yrs', '40yrs-60yrs', '40yrs-75yrs', 'Life']
-                  }
-                },
+var chart = c3.generate({
+  bindto: '#race',
+    data: {
+        x : 'x',
+        columns: [
+            ['x', 'Black', 'White','Other race/unknown'],
+            ['Juvenile lifers', 260, 44, 8],
+        ],
+        type: 'bar'
+    },
+    bar: {
+        width: {
+            ratio: 0.5 // this makes bar width 50% of length between ticks
+        }
+        // or
+        //width: 100 // this makes bar width 100px
+    },
+    axis: {
+        x: {
+            type: 'category' // this needed to load string x value
+        }
+    },
+    color: {
+      pattern: ['#78A6DD']
+    }
+});
 
 
-               color: {
-                 pattern: ['#78A6DD', '#D9B168', '#27548C', '#689AD9', '#973895']
-               }
-           });
 
+     var chart2 = c3.generate({
 
+         data: {
+             x: 'x',
+             columns: [
+                  ['x', 'Asian', 'Black', 'Hispanic/Latino', 'Native American or Alaskan Native', 'Native Hawaiian or Pacific Islander', 'White','Other race/unknown'],
+                 ['Juvenile lifers', 2, 239, 16, 2, 1, 8, 44],
+             ],
+             type: 'bar'
+         },
 
-           var chart3 = c3.generate({
-             bindto: '#incarceration2',
-             data: {
-               x: 'x',
-               columns: [
-                 ['x', 2014, 2015, 2016, 2017, 2018,2019],
-                ['Black juveniles', 1, 2, 34, 58, 24, 12],
-                ['White juveniles', 1, 1, 7, 11, 10, 13]
-               ]
-             },
-             color: {
-               pattern: ['#D9B269', '#78A6DD', '#ee6a4b', '#60c4b2', '#973895']
-             }
-           });
+     });
+
 
 </script>
 
