--- a/other-states.html
+++ b/other-states.html
@@ -142,12 +142,23 @@
     <div class="incarceration-graph"><br>
         <div class="graphic-container">
           <div class="chart-title"><b>Incarceration rates for juvenile lifers in Michigan</b></div>
+          <div class="chart-description">The number of juveniles sentenced to life without parole spiked in the '90s. </div><br>
+          <div class="chart-author">By CAMILA VELLOSO</div><br>
+        </div>
+        <div id="incarceration1"></div><br>
+        <div class="chart-source">Source: Michigan Department of Corrections</div><br>
+      </div><br><br>  <!-- END first graphic container-->
+
+    <!--
+    <div class="incarceration-graph"><br>
+        <div class="graphic-container">
+          <div class="chart-title"><b>Incarceration rates for juvenile lifers in Michigan</b></div>
           <div class="chart-description">The number of black juveniles sentenced to life without parole spiked in the '90s, but decreased for white juveniles.</div><br>
           <div class="chart-author">By CAMILA VELLOSO</div><br>
         </div>
         <div id="incarceration"></div><br>
         <div class="chart-source">Source: Pennsylvania Department of Corrections</div><br>
-      </div><br><br>  <!-- END first graphic container-->
+      </div><br><br> -->
 
     <p>They appealed to the Michigan Supreme Court seeking to preserve life without parole. That case delayed action on reviews of other sentences. On June 21, 2018, Chief Justice Stephen Markman, writing for the majority, said that a trial judge doesn’t need to find any particular fact to keep juveniles behind bars for life. He wrote: &quot;If the trial court simply finds that there are no mitigating circumstances, it can sentence a juvenile to life without parole.&quot; </p><br><br>
 
@@ -251,6 +262,33 @@
    <script type="text/javascript">
    //CHART 1
 
+           var chart = c3.generate({
+              bindto: '#incarceration1',
+               data: {
+                   columns: [
+                     ['Black juveniles', 3, 17, 67, 107, 50, 14],
+                     ['White juveniles', 2, 7, 29, 38, 18, 2]
+                   ],
+                   type: 'bar'
+               },
+               bar: {
+                   width: {
+                       ratio: 0.5 // this makes bar width 50% of length between ticks
+                   }
+                   // or
+                   //width: 100 // this makes bar width 100px
+               },
+               axis: {
+                   x: {
+                       type: 'category',
+                       categories: ['1960s', '1970s', '1980s', '1990s', '2000s', '2010s']
+                   }
+               },
+               color: {
+                 pattern: ['#D9B168', '#78A6DD', '#ee6a4b', '#60c4b2', '#973895']
+               }
+           });
+
            var chart1 = c3.generate({
              bindto: '#incarceration',
              data: {
@@ -258,7 +296,7 @@
                columns: [
                  ['x', 1960, 1970, 1980, 1990, 2000,2010],
                 ['Black juveniles', 3, 17, 67, 107, 50, 14],
-                ['White juveniles', 2, 7, 29, 28, 18, 2]
+                ['White juveniles', 2, 7, 29, 38, 18, 2]
                ]
              },
              color: {
