social-media-popups

--- a/index.html
+++ b/index.html
@@ -42,14 +42,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.1/d3.min.js" charset="utf-8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.6.13/c3.min.js"></script>
 
-    <!-- our CSS  -->
-    <link rel="stylesheet" href="css/style1.css">
+
 
     <!-- Fontawesome  -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- our CSS  -->
+    <link rel="stylesheet" href="css/style1.css">
 
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
@@ -88,7 +90,7 @@
       <div class="col-xs-2 pull-right"></div>
         <div class="col-xs-10" id="topbar"> Howard Center for Investigative Journalism | CNS | PBS<span class="topbar-mobile"> Newshour</span>
         </div>
-        <div class="col-xs-2 pull-left" id="social-icons"><i class="fa">&#xf099;</i> &nbsp <i class="fa">&#xf09a;</i></div>
+        <div class="col-xs-2 pull-left" id="social-icons"><i class="fa icon-twitter">&#xf099;</i> &nbsp <i class="fa icon-facebook">&#xf09a;</i></div>
     </div>
 
   <!-- Title Animation-->
@@ -282,6 +284,23 @@
 
 </div><br><br><!-- END Main Container -->
 
+
+<!-- Javascript for social button popups -->
+<script src="js/social-buttons.js"></script>
+
+<!-- Variables for social media icon popups -->
+  <script type="text/javascript">
+    //Twitter variables
+    var tweet = "INSERT TWEET TEXT URL"; //Tweet text
+    var url = "INSERT PROJECT URL"; //Interactive URL
+
+    //Facebook variables
+    var picture = "INSERT FACEBOOK THUMBNAIL URL"; //Picture URL
+    var title = "INSERT PROJECT TITLE"; //Post title
+    var description = "INSERT DESC"; //Post description
+    var url = "INSERT PROJECT URL"; //Interactive URL
+
+  </script>
 
 
 
