added video links

--- a/lifer-profiles.html
+++ b/lifer-profiles.html
@@ -125,11 +125,29 @@
     <p class="state">EARL YOUNG</p>
     <p class="author">By <span>DELON THORNTON</span></p><br>
 
-    <p>Earl Young was released in July. Producer DeLon Thornton arranged for Young to tell his story to “PBS NewsHour” correspondent John Yang. Thornton shares more of Young’s story.</p><br><br>
+    <p>Earl Young was released in July. Producer DeLon Thornton arranged for Young to tell his story to “PBS NewsHour” correspondent John Yang. Thornton shares more of Young’s story. Additional filming by Jamal Williams.</p><br><br>
+
+    <p style="font-style: italic;"> On finally being free: </p><br>
 
     <div class="video-content">
       <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/M2GgIXkvFeE"></iframe>
+        <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/376893885"></iframe>
+      </div>
+    </div><br><br>
+
+    <p style="font-style: italic;"> On the remnants of institutionalization:</p><br>
+
+    <div class="video-content">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/376895210"></iframe>
+      </div>
+    </div><br><br>
+
+    <p style="font-style: italic;"> On the changes of the world since being incarcerated:</p><br>
+
+    <div class="video-content">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/376896731"></iframe>
       </div>
     </div><br><br>
 
