--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
   <div class="article-boxes">
       <div class="row">
           <div class="col-md-12">
-            <div class="card flex-md-row box-shadow">
-              <img class="card-img-left flex-auto d-none d-md-block" src="images/flag-thumb.jpg" alt="Card image cap">
+            <div class="card-index box-shadow">
+              <img class="card-img-left flex-auto d-none d-md-block index-img" src="images/flag-thumb.jpg" alt="Card image cap">
               <div class="card-body d-flex flex-column">
                 <p class="d-inline-block article-title"><a href="glendening-effect.html" style="color: white !important">The Glendening Effect</a></p>
                 <p class="card-text article-blurb">Former Gov. Parris Glendening’s &quot;life means life&quot; policy changes criminal sentences for hundreds of prisoners. It is a decision he calls &quot;a mistake,&quot; but it’s impact continues to this day.</p>
@@ -157,8 +157,8 @@
 
         <div class="row">
             <div class="col-md-12">
-              <div class="card flex-md-row box-shadow">
-                <img class="card-img-left flex-auto d-none d-md-block" src="images/mrji-thumb.jpg" alt="Card image cap">
+              <div class="card-index flex-md-row box-shadow">
+                <img class="card-img-left flex-auto d-none d-md-block index-img" src="images/mrji-thumb.jpg" alt="Card image cap">
                 <div class="card-body d-flex flex-column">
                   <p class="d-inline-block article-title"><a href="lomax.html" style="color: white !important">Victims' Story</a></p>
                   <p class="card-text article-blurb">Walter Lomax understands both sides of this tragedy, having been wrongfully incarcerated for 38 years and lost family members to violence in Baltimore.</p>
@@ -171,8 +171,8 @@
 
           <div class="row">
               <div class="col-md-12">
-                <div class="card flex-md-row box-shadow">
-                  <img class="card-img-left flex-auto d-none d-md-block" src="images/lifers-thumb.jpg" alt="Card image cap">
+                <div class="card-index flex-md-row box-shadow">
+                  <img class="card-img-left flex-auto d-none d-md-block index-img" src="images/lifers-thumb.jpg" alt="Card image cap">
                   <div class="card-body d-flex flex-column">
                     <p class="d-inline-block article-title"><a href="lifer-profiles.html" style="color: white !important">Meet the juvenile lifers</a></p>
                     <p class="card-text article-blurb">Earl Young and Calvin McNeill went to prison determined to win parole. They have spent a combined 72 years behind bars.</p>
@@ -203,8 +203,8 @@
     <div class="article-boxes">
         <div class="row">
             <div class="col-md-12">
-              <div class="card flex-md-row box-shadow">
-                <img class="card-img-left flex-auto d-none d-md-block" src="images/pa-thumb.jpg" alt="Card image cap">
+              <div class="card-index flex-md-row box-shadow">
+                <img class="card-img-left flex-auto d-none d-md-block index-img" src="images/pa-thumb.jpg" alt="Card image cap">
                 <div class="card-body d-flex flex-column">
                   <p class="d-inline-block article-title"><a href="pennsylvania.html" style="color: white !important">Pennsylvania’s about-face</a></p>
                   <p class="card-text article-blurb">In the Keystone State more than 500 juveniles served sentences of life without parole. Today many of them have been re-sentenced, many to time served.</p>
@@ -217,8 +217,8 @@
 
           <div class="row">
               <div class="col-md-12">
-                <div class="card flex-md-row box-shadow">
-                  <img class="card-img-left flex-auto d-none d-md-block" src="images/wire-thumb.png" alt="Card image cap">
+                <div class="card-index flex-md-row box-shadow">
+                  <img class="card-img-left flex-auto d-none d-md-block index-img" src="images/wire-thumb.png" alt="Card image cap">
                   <div class="card-body d-flex flex-column">
                     <p class="d-inline-block article-title"><a href="other-states.html" style="color: white !important">Michigan and Florida go different routes</a></p>
                     <p class="card-text article-blurb">Both states had large numbers of juveniles sentenced to life without parole. Both have hit speed bumps as they try to respond to the Supreme Court.</p>
@@ -231,8 +231,8 @@
 
             <div class="row">
                 <div class="col-md-12">
-                  <div class="card flex-md-row box-shadow">
-                    <img class="card-img-left flex-auto d-none d-md-block" src="images/annapolis-thumb.jpg" alt="Card image cap">
+                  <div class="card-index flex-md-row box-shadow">
+                    <img class="card-img-left flex-auto d-none d-md-block index-img" src="images/annapolis-thumb.jpg" alt="Card image cap">
                     <div class="card-body d-flex flex-column">
                       <p class="d-inline-block article-title"><a href="three-states.html" style="color: white !important">Parole in the hands of governors</a></p>
                       <p class="card-text article-blurb">In most states parole commissions decide who should be released. Only three require the governor to sign paroles. Each state has handled the court’s rulings differently.</p>
@@ -245,8 +245,8 @@
 
               <div class="row">
                   <div class="col-md-12">
-                    <div class="card flex-md-row box-shadow">
-                      <img class="card-img-left flex-auto d-none d-md-block" src="images/sc-thumb.jpg" alt="Card image cap">
+                    <div class="card-index flex-md-row box-shadow">
+                      <img class="card-img-left flex-auto d-none d-md-block index-img" src="images/sc-thumb.jpg" alt="Card image cap">
                       <div class="card-body d-flex flex-column">
                         <p class="d-inline-block article-title"><a href="supreme-court.html" style="color: white !important">Five Supreme Court decisions that changed sentencing for juveniles</a></p>
                         <p class="card-text article-blurb">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
