--- a/lomax.html
+++ b/lomax.html
@@ -134,6 +134,17 @@
 
     <p>The U.S. Supreme Court has recognized different standards for juveniles in light of their immaturity, vulnerability and changeability.</p><br><br>
 
+    <p class="pullquote">
+      <span style="font-size: 1.7em; color: #D9B269;">&quot;</span>&nbsp;
+
+      <span>Some of the people who were incarcerated who weren’t the same people that they were when they committed the crime.</span>&nbsp;
+
+      <span style="font-size: 1.7em;color: #D9B269;">&quot;</span>&nbsp; <br>
+
+      <br><span class="attribution"> &mdash; Walter Lomax, Maryland Restorative Justice Initiative<span>
+
+    </p><br><br>
+
     <p>“What I was able to do is observe some of the people who were incarcerated who weren’t the same people that they were when they committed the crime,” he said.</p><br><br>
 
     <p>Now, Lomax works to help others gain a similar perspective. He has met with the mothers of murder victims and has cultivated many friendships with them. But what one mother did is what he thinks could help many others.</p><br><br>
@@ -173,7 +184,7 @@
       <b>Graphics:</b> Camila Velloso, Hannah Gaskill and Ally Tobler<br><br>
       <b>Project editors:</b> Kathy Best, Tom Bettag, Karen Denny, Marty Kaiser, Adam Marton and Sean Mussenden<br><br>
       <b>Audience engagement:</b> Alex Pyles<br><br>
-      <b>Top photo:</b> Capital News Service<br><br>
+      <b>Top photo:</b> Julie Depenbrock, Capital News Service<br><br>
     </p><br>
 
 
