--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <div class="row">
             <div class="col-md-12">
               <div class="card-index flex-md-row box-shadow">
-                <img class="card-img-left flex-auto d-none d-md-block index-img" src="images/mrji-thumb.jpg" alt="Card image cap">
+                <img class="card-img-left flex-auto d-none d-md-block index-img" src="images/lomax-thumb.jpg" alt="Card image cap">
                 <div class="card-body d-flex flex-column">
                   <p class="d-inline-block article-title"><a href="lomax.html" style="color: white !important">The Victims’ Side</a></p>
                   <p class="card-text article-blurb">Juvenile lifers have committed horrible crimes that have stolen loved ones from their families. How do we deal with their pain?</p>
